--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -54,7 +54,7 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 129,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -81,7 +81,7 @@
       "source": [
         "websites = pd.read_csv('https://raw.githubusercontent.com/eduardoheros/lab-supervised-learning/master/website.csv')"
       ],
-      "execution_count": 130,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -115,12 +115,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 275
         },
-        "outputId": "f1ff82c9-52d8-464a-956a-dc655ea3dbbb"
+        "outputId": "70ef18b8-c633-4c1e-8d21-51cf2a443e5c"
       },
       "source": [
         "websites.head()"
       ],
-      "execution_count": 131,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -306,7 +306,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 131
+          "execution_count": 3
         }
       ]
     },
@@ -317,14 +317,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 521
+          "height": 493
         },
-        "outputId": "42be6214-d413-45b6-862c-e4a3c15df245"
+        "outputId": "e4f66ff3-5e26-422a-ef61-70dbd0576df3"
       },
       "source": [
         "websites.info()"
       ],
-      "execution_count": 132,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -389,13 +389,26 @@
       "metadata": {
         "id": "SudXe1kDaVX9",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "5f913c24-690d-4c52-dec9-90717729dfdd"
       },
       "source": [
         "import seaborn as sns"
       ],
-      "execution_count": 134,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+            "  import pandas.util.testing as tm\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -406,7 +419,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 869
         },
-        "outputId": "22311f2b-7af6-4fd0-e669-2c14757922d2"
+        "outputId": "122c5c55-7b24-4dc3-fe03-c6c205012789"
       },
       "source": [
         "def visual_corr(websites):\n",
@@ -418,7 +431,7 @@
         "  sns.heatmap(matrix_corr,annot=True,mask=mask,cbar=False,linewidths=1,cmap=\"YlGnBu\",center=0);\n",
         "visual_corr(websites)"
       ],
-      "execution_count": 135,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -453,7 +466,7 @@
         "    x=1000*x\n",
         "  return x"
       ],
-      "execution_count": 136,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -472,7 +485,7 @@
         "  sort_corr=sum_matrix_corr.sort_values(by=\"SUM\",ascending=False)\n",
         "  return sort_corr[\"SUM\"]"
       ],
-      "execution_count": 137,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -482,15 +495,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 287
+          "height": 272
         },
-        "outputId": "20904d26-cd60-4ef8-97d4-b48722a52b14"
+        "outputId": "47187e7c-bba6-4b43-8ad0-c8dce1b8dd70"
       },
       "source": [
         "##Las columnas listadas presentan las correlaciones mas altas\n",
         "col_rem(websites)"
       ],
-      "execution_count": 138,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -516,7 +529,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 138
+          "execution_count": 9
         }
       ]
     },
@@ -546,7 +559,7 @@
       "source": [
         "columnas=col_rem(websites).index[0:3]"
       ],
-      "execution_count": 139,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -558,13 +571,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 868
         },
-        "outputId": "b10f1bbb-1edb-4923-c7c4-ef89dd49f036"
+        "outputId": "82244a70-e675-4134-b4b9-d63253597cc0"
       },
       "source": [
         "websites.drop(columns=columnas,inplace=True)\n",
         "visual_corr(websites)"
       ],
-      "execution_count": 140,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -587,14 +600,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 233
+          "height": 221
         },
-        "outputId": "6a228a8f-826b-4d1f-87db-e45c7d4c445e"
+        "outputId": "bb0b1a3b-3130-4172-b574-4c992ee4273b"
       },
       "source": [
         "col_rem(websites)"
       ],
-      "execution_count": 141,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -617,7 +630,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 141
+          "execution_count": 12
         }
       ]
     },
@@ -628,15 +641,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 215
+          "height": 204
         },
-        "outputId": "a55c82b7-f2ae-44c7-ca93-b38bd18e6369"
+        "outputId": "4bbf5d2a-2acc-48e7-c6eb-fde8db2228fc"
       },
       "source": [
         "websites.drop(columns=\"REMOTE_APP_BYTES\",inplace=True)\n",
         "col_rem(websites)"
       ],
-      "execution_count": 142,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -658,7 +671,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 142
+          "execution_count": 13
         }
       ]
     },
@@ -669,15 +682,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 197
+          "height": 187
         },
-        "outputId": "ec21b877-df32-4990-9043-27320de96074"
+        "outputId": "624b1341-bb7e-49e5-d5ff-cd43d12c816b"
       },
       "source": [
         "websites.drop(columns=\"NUMBER_SPECIAL_CHARACTERS\",inplace=True)\n",
         "col_rem(websites)"
       ],
-      "execution_count": 143,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -698,7 +711,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 143
+          "execution_count": 14
         }
       ]
     },
@@ -711,12 +724,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 831
         },
-        "outputId": "29171a37-650b-41e5-d446-fbd29e0bf266"
+        "outputId": "e23e605b-8834-4a49-9c15-c1ba4885c3a6"
       },
       "source": [
         "visual_corr(websites)"
       ],
-      "execution_count": 144,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -751,14 +764,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 431
+          "height": 408
         },
-        "outputId": "2efd26ed-6128-4aea-815f-2928e56dbbae"
+        "outputId": "733e3894-7b5b-4d7b-ec5c-ee482fe1eab2"
       },
       "source": [
         "websites.info()"
       ],
-      "execution_count": 145,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -813,7 +826,7 @@
       "source": [
         "websites.drop(columns=\"CONTENT_LENGTH\",inplace=True)"
       ],
-      "execution_count": 146,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -826,7 +839,7 @@
       "source": [
         "websites.dropna(inplace=True)"
       ],
-      "execution_count": 147,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -848,14 +861,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 413
+          "height": 391
         },
-        "outputId": "bdf7634b-2ca3-483b-b061-67263aee0a27"
+        "outputId": "d457e9a9-5fb0-4c2e-9ed9-7903460ef295"
       },
       "source": [
         "websites.info()"
       ],
-      "execution_count": 148,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -933,14 +946,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 125
+          "height": 119
         },
-        "outputId": "801cfc43-88bc-47fc-b3c6-b00a4c151c94"
+        "outputId": "b5223f8a-bcf0-438f-c37f-2e3c6e3bc243"
       },
       "source": [
         "pd.unique(websites.WHOIS_COUNTRY)"
       ],
-      "execution_count": 174,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -957,55 +970,36 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 174
+          "execution_count": 20
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aXA23yLWaVZX",
+        "id": "s6isfs_mzsKk",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 233
-        },
-        "outputId": "19669029-72a4-4c02-eebe-02258f8a7975"
+        "colab": {}
       },
       "source": [
-        "websites.WHOIS_COUNTRY.str.replace('Cyprus',\"CY\")\n",
-        "websites.WHOIS_COUNTRY.str.replace('us',\"US\")\n",
-        "websites.WHOIS_COUNTRY.str.replace('se',\"SE\")\n",
-        "websites.WHOIS_COUNTRY.str.replace('United Kingdom',\"UK\")\n",
-        "websites.WHOIS_COUNTRY.str.replace('GB',\"UK\")\n",
-        "websites.WHOIS_COUNTRY.str.replace(\"[u'GB'; u'UK']\",\"UK\")"
+        "dict_replace={\"CYPRUS\":\"CY\",\"UNITED KINGDOM\":\"UK\",\"[U'GB'; U'UK']\":\"UK\"}"
       ],
-      "execution_count": 173,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0       None\n",
-              "1       None\n",
-              "2       None\n",
-              "3        UKS\n",
-              "4        UKS\n",
-              "        ... \n",
-              "1776      ES\n",
-              "1777      ES\n",
-              "1778     UKS\n",
-              "1779     UKS\n",
-              "1780     UKS\n",
-              "Name: WHOIS_COUNTRY, Length: 1779, dtype: object"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 173
-        }
-      ]
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aXA23yLWaVZX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "websites.WHOIS_COUNTRY=websites.WHOIS_COUNTRY.apply(lambda x: x.upper())\n",
+        "websites.WHOIS_COUNTRY=websites.WHOIS_COUNTRY.replace(dict_replace)"
+      ],
+      "execution_count": 22,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1028,13 +1022,74 @@
       "metadata": {
         "id": "QjLOWrfIaVZn",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 782
+        },
+        "outputId": "0473f9db-c0b1-478a-9cee-9135c7d498c0"
       },
       "source": [
-        "# Your code here\n"
+        "websites.WHOIS_COUNTRY.value_counts()"
       ],
-      "execution_count": 150,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "US      1105\n",
+              "NONE     306\n",
+              "CA        83\n",
+              "ES        63\n",
+              "AU        35\n",
+              "PA        21\n",
+              "GB        19\n",
+              "UK        16\n",
+              "JP        11\n",
+              "CN        10\n",
+              "IN        10\n",
+              "FR         9\n",
+              "CZ         9\n",
+              "NL         6\n",
+              "CH         6\n",
+              "RU         6\n",
+              "KR         5\n",
+              "BS         4\n",
+              "AT         4\n",
+              "SE         4\n",
+              "PH         4\n",
+              "HK         3\n",
+              "SC         3\n",
+              "BE         3\n",
+              "TR         3\n",
+              "DE         3\n",
+              "KY         3\n",
+              "NO         2\n",
+              "BR         2\n",
+              "SI         2\n",
+              "KG         2\n",
+              "CY         2\n",
+              "IL         2\n",
+              "UA         2\n",
+              "UY         2\n",
+              "BY         1\n",
+              "PK         1\n",
+              "LV         1\n",
+              "LU         1\n",
+              "IT         1\n",
+              "UG         1\n",
+              "TH         1\n",
+              "IE         1\n",
+              "AE         1\n",
+              "Name: WHOIS_COUNTRY, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 45
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1057,7 +1112,7 @@
       "source": [
         "# Your code here\n"
       ],
-      "execution_count": 151,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -1084,7 +1139,7 @@
       "source": [
         "# Your code here\n"
       ],
-      "execution_count": 152,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -1109,7 +1164,7 @@
       "source": [
         "# Your code here\n"
       ],
-      "execution_count": 153,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -1132,7 +1187,7 @@
       "source": [
         "# Your code here\n"
       ],
-      "execution_count": 154,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -1155,7 +1210,7 @@
       "source": [
         "# Your code here"
       ],
-      "execution_count": 155,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -1180,7 +1235,7 @@
       "source": [
         "# Your code here\n"
       ],
-      "execution_count": 156,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -1203,7 +1258,7 @@
       "source": [
         "# Your comment here\n"
       ],
-      "execution_count": 157,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -1228,7 +1283,7 @@
       "source": [
         "# Your code here\n"
       ],
-      "execution_count": 158,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -1242,7 +1297,7 @@
       "source": [
         "# Count `SERVER` value counts here\n"
       ],
-      "execution_count": 159,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -1265,7 +1320,7 @@
       "source": [
         "# Your code here\n"
       ],
-      "execution_count": 160,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -1288,7 +1343,7 @@
       "source": [
         "# Your code here\n"
       ],
-      "execution_count": 161,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -1315,7 +1370,7 @@
         "\n",
         "# Your code here:\n"
       ],
-      "execution_count": 162,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -1341,7 +1396,7 @@
         "# Your code here:\n",
         "\n"
       ],
-      "execution_count": 163,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -1365,7 +1420,7 @@
         "# Your code here:\n",
         "\n"
       ],
-      "execution_count": 164,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -1389,7 +1444,7 @@
         "# Your code here:\n",
         "\n"
       ],
-      "execution_count": 165,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -1413,7 +1468,7 @@
         "# Your conclusions here:\n",
         "\n"
       ],
-      "execution_count": 166,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -1439,7 +1494,7 @@
         "# Your code here:\n",
         "\n"
       ],
-      "execution_count": 167,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -1463,7 +1518,7 @@
         "# Your code here:\n",
         "\n"
       ],
-      "execution_count": 168,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -1489,7 +1544,7 @@
         "# Your code here:\n",
         "\n"
       ],
-      "execution_count": 169,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -1513,7 +1568,7 @@
         "# Your conclusions here:\n",
         "\n"
       ],
-      "execution_count": 170,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -1542,7 +1597,7 @@
       "source": [
         "# Your code here"
       ],
-      "execution_count": 171,
+      "execution_count": 44,
       "outputs": []
     }
   ]
