--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -115,7 +115,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 275
         },
-        "outputId": "70ef18b8-c633-4c1e-8d21-51cf2a443e5c"
+        "outputId": "ab90f26d-e995-46af-df09-34d6234491be"
       },
       "source": [
         "websites.head()"
@@ -317,9 +317,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 493
+          "height": 521
         },
-        "outputId": "e4f66ff3-5e26-422a-ef61-70dbd0576df3"
+        "outputId": "79ee0d80-c974-4360-a19a-b6b11ed629df"
       },
       "source": [
         "websites.info()"
@@ -391,9 +391,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 73
         },
-        "outputId": "5f913c24-690d-4c52-dec9-90717729dfdd"
+        "outputId": "78d8b762-41b8-4704-cc12-9d5bdcf77e10"
       },
       "source": [
         "import seaborn as sns"
@@ -419,7 +419,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 869
         },
-        "outputId": "122c5c55-7b24-4dc3-fe03-c6c205012789"
+        "outputId": "ecf19f48-beb1-4080-b8d9-d0ddeca27e07"
       },
       "source": [
         "def visual_corr(websites):\n",
@@ -495,9 +495,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 272
+          "height": 287
         },
-        "outputId": "47187e7c-bba6-4b43-8ad0-c8dce1b8dd70"
+        "outputId": "143bbe79-0df7-4174-8a6c-4657a5d3254d"
       },
       "source": [
         "##Las columnas listadas presentan las correlaciones mas altas\n",
@@ -571,7 +571,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 868
         },
-        "outputId": "82244a70-e675-4134-b4b9-d63253597cc0"
+        "outputId": "16a44a4c-5ab0-46d9-9c8c-5a0719bf80bd"
       },
       "source": [
         "websites.drop(columns=columnas,inplace=True)\n",
@@ -600,9 +600,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 221
+          "height": 233
         },
-        "outputId": "bb0b1a3b-3130-4172-b574-4c992ee4273b"
+        "outputId": "33fd1b51-97c1-4b19-926f-24c64a2d19de"
       },
       "source": [
         "col_rem(websites)"
@@ -641,9 +641,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 215
         },
-        "outputId": "4bbf5d2a-2acc-48e7-c6eb-fde8db2228fc"
+        "outputId": "82c7b706-3d0c-495d-81a0-dc79f4f1d26e"
       },
       "source": [
         "websites.drop(columns=\"REMOTE_APP_BYTES\",inplace=True)\n",
@@ -682,9 +682,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 187
+          "height": 197
         },
-        "outputId": "624b1341-bb7e-49e5-d5ff-cd43d12c816b"
+        "outputId": "719561ec-0400-44bc-d6e3-297868806839"
       },
       "source": [
         "websites.drop(columns=\"NUMBER_SPECIAL_CHARACTERS\",inplace=True)\n",
@@ -724,7 +724,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 831
         },
-        "outputId": "e23e605b-8834-4a49-9c15-c1ba4885c3a6"
+        "outputId": "83787c80-a970-4f34-ce6d-aa742d15cb54"
       },
       "source": [
         "visual_corr(websites)"
@@ -764,9 +764,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 408
+          "height": 431
         },
-        "outputId": "733e3894-7b5b-4d7b-ec5c-ee482fe1eab2"
+        "outputId": "ee71a4dc-4e0c-4500-ff23-1a6ebaa7a977"
       },
       "source": [
         "websites.info()"
@@ -861,9 +861,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 391
+          "height": 413
         },
-        "outputId": "d457e9a9-5fb0-4c2e-9ed9-7903460ef295"
+        "outputId": "d47e4be5-3784-42b8-faf3-a6f0e759fb41"
       },
       "source": [
         "websites.info()"
@@ -946,9 +946,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 119
+          "height": 125
         },
-        "outputId": "b5223f8a-bcf0-438f-c37f-2e3c6e3bc243"
+        "outputId": "d144640d-96e1-4d72-f1b6-aae22236cf7b"
       },
       "source": [
         "pd.unique(websites.WHOIS_COUNTRY)"
@@ -982,9 +982,9 @@
         "colab": {}
       },
       "source": [
-        "dict_replace={\"CYPRUS\":\"CY\",\"UNITED KINGDOM\":\"UK\",\"[U'GB'; U'UK']\":\"UK\"}"
+        "dict_replace={\"CYPRUS\":\"CY\",\"UNITED KINGDOM\":\"UK\",\"[U'GB'; U'UK']\":\"UK\",\"GB\":\"UK\"}"
       ],
-      "execution_count": 21,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -998,7 +998,7 @@
         "websites.WHOIS_COUNTRY=websites.WHOIS_COUNTRY.apply(lambda x: x.upper())\n",
         "websites.WHOIS_COUNTRY=websites.WHOIS_COUNTRY.replace(dict_replace)"
       ],
-      "execution_count": 22,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -1024,14 +1024,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 782
+          "height": 215
         },
-        "outputId": "0473f9db-c0b1-478a-9cee-9135c7d498c0"
+        "outputId": "4e49f2dd-0153-409d-d879-8e26cd498ba5"
       },
       "source": [
-        "websites.WHOIS_COUNTRY.value_counts()"
+        "country=websites.WHOIS_COUNTRY.value_counts()\n",
+        "country[0:10]"
       ],
-      "execution_count": 45,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1041,53 +1042,19 @@
               "NONE     306\n",
               "CA        83\n",
               "ES        63\n",
+              "UK        35\n",
               "AU        35\n",
               "PA        21\n",
-              "GB        19\n",
-              "UK        16\n",
               "JP        11\n",
               "CN        10\n",
               "IN        10\n",
-              "FR         9\n",
-              "CZ         9\n",
-              "NL         6\n",
-              "CH         6\n",
-              "RU         6\n",
-              "KR         5\n",
-              "BS         4\n",
-              "AT         4\n",
-              "SE         4\n",
-              "PH         4\n",
-              "HK         3\n",
-              "SC         3\n",
-              "BE         3\n",
-              "TR         3\n",
-              "DE         3\n",
-              "KY         3\n",
-              "NO         2\n",
-              "BR         2\n",
-              "SI         2\n",
-              "KG         2\n",
-              "CY         2\n",
-              "IL         2\n",
-              "UA         2\n",
-              "UY         2\n",
-              "BY         1\n",
-              "PK         1\n",
-              "LV         1\n",
-              "LU         1\n",
-              "IT         1\n",
-              "UG         1\n",
-              "TH         1\n",
-              "IE         1\n",
-              "AE         1\n",
               "Name: WHOIS_COUNTRY, dtype: int64"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 45
+          "execution_count": 49
         }
       ]
     },
@@ -1107,13 +1074,41 @@
         "scrolled": true,
         "id": "fKqZhBr1aVZt",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 233
+        },
+        "outputId": "7d0dda86-acd4-401a-8983-217177c850e2"
       },
       "source": [
-        "# Your code here\n"
+        "websites.WHOIS_COUNTRY"
       ],
-      "execution_count": 24,
-      "outputs": []
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0       NONE\n",
+              "1       NONE\n",
+              "2       NONE\n",
+              "3         US\n",
+              "4         US\n",
+              "        ... \n",
+              "1776      ES\n",
+              "1777      ES\n",
+              "1778      US\n",
+              "1779      US\n",
+              "1780      US\n",
+              "Name: WHOIS_COUNTRY, Length: 1779, dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 50
+        }
+      ]
     },
     {
       "cell_type": "markdown",
